...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oTg-wX-DMa">
                                <rect key="frame" x="16" y="136" width="343" height="31.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="titleLabel"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <nil key="textColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pB2-IN-cUc">
                                <rect key="frame" x="164" y="443" width="47" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="toggleButton"/>
                                <state key="normal" title="Toggle"/>
                                <connections>
...
                        </subviews>
                        <color key="backgroundColor" red="0.5" green="1" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <accessibility key="accessibilityConfiguration" identifier="backgroundView"/>
                        <constraints>
                            <constraint firstItem="oTg-wX-DMa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="2IP-6T-Rtu"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="8ft-dq-LnD"/>
                    <connections>
                        <outlet property="titleLabel" destination="oTg-wX-DMa" id="DQa-BZ-nba"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Matt Glover" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCC-az-Db1">
                                <rect key="frame" x="141" y="267" width="93" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="profileNameLabel"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location: Leeds, UK" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Hy-4Y-8gq">
                                <rect key="frame" x="127" y="288" width="121" height="16"/>
                                <accessibility key="accessibilityConfiguration" identifier="locationLabel"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                <nil key="textColor"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="xfr-l8-ruK">
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="g4d-7Z-0W3">
                            <connections>
                                <action selector="editButtonTapped:" destination="7Ps-ek-0Nr" id="iKu-C3-T3M"/>
...
                            <switch opaque="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4jp-Qm-pMF">
                                <rect key="frame" x="310" y="47" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="redSwitch"/>
                                <connections>
                                    <action selector="switchValueChanged:" destination="Goh-qj-6WA" eventType="valueChanged" id="rKu-Rj-o8w"/>
...
                            <switch opaque="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="v41-2J-7Ld">
                                <rect key="frame" x="310" y="103" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="greenSwitch"/>
                                <connections>
                                    <action selector="switchValueChanged:" destination="Goh-qj-6WA" eventType="valueChanged" id="KDE-MD-IWH"/>
...
                            <switch opaque="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9c0-hf-iq4">
                                <rect key="frame" x="310" y="161" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="blueSwitch"/>
                                <connections>
                                    <action selector="switchValueChanged:" destination="Goh-qj-6WA" eventType="valueChanged" id="eSI-Lm-blq"/>
...
                                <rect key="frame" x="87.5" y="250" width="200" height="200"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="colorPanel">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="8ht-nw-Pur"/>
                    <connections>
                        <outlet property="colorPanelView" destination="xef-Pl-9a1" id="7mp-Hv-kIT"/>
...
